# touchstone-rs

./: .gitignore  ADD_ALGORITHM.md  AGENTS.md  CITATION.cff  CLAUDE.md  Cargo.toml  DATASETS.md  LICENSE  README.md  WORKFLOW.md  index.html  results.csv
.github/workflows/: audit.yml  benchmark.yml  enforce-base-branch.yml  python.yml  revoke-smoketest.yml  rust.yml  smoketest.yml
algorithms/baseline/: Cargo.toml
algorithms/baseline/src/: main.rs
algorithms/normal-distribution/: Cargo.toml
algorithms/python/dwt-mlead/: detector.py  pyproject.toml  tests.py
algorithms/python/tinytimemixer/: README.md  detector.py  model.py  pyproject.toml  tests.py
algorithms/python/toto_4m/: README.md  detector.py  pyproject.toml  tests.py
benchmark/: CoMuT-ts_0.parquet  Exathlon-5_1_100000_63-64.parquet  GutenTAG-cbf-position-end.parquet  GutenTAG-ecg-type-pattern-shift.parquet  GutenTAG-poly-channels-single-of-2.parquet  GutenTAG-poly-same-count-1.parquet  GutenTAG-rw-channels-all-of-3.parquet  GutenTAG-sinus-channels-single-of-10.parquet  GutenTAG-sinus-channels-single-of-5.parquet  KDD-TSAD-001_UCR_Anomaly_DISTORTED1sddb40.parquet  KDD-TSAD-058_UCR_Anomaly_DISTORTEDapneaecg.parquet  KDD-TSAD-081_UCR_Anomaly_DISTORTEDresperation3.parquet  KDD-TSAD-114_UCR_Anomaly_CIMIS44AirTemperature2.parquet  KDD-TSAD-143_UCR_Anomaly_InternalBleeding8.parquet  KDD-TSAD-189_UCR_Anomaly_resperation3.parquet  MITDB-115.parquet  SMD-machine-1-2.parquet  SMD-machine-3-5.parquet  SVDB-820.parquet  SVDB-827.parquet
examples/: normal_distribution_detector.rs
leaderboard/: template.html
scripts/: build-detector.sh  check-output.sh  extract-detector-name.sh  run-detector.sh  update-leaderboard.py
src/: lib.rs
src/metrics/: classification.rs  vus.rs
touchstone-py/: Cargo.toml  pyproject.toml
touchstone-py/src/: lib.rs
touchstone-py/tests/: test_run_touchstone.py
touchstone-py/touchstone_py/: __init__.py  _rust_backend.pyi  detector.py
touchstone-rs/: Cargo.toml
touchstone-rs/examples/: normal_distribution_detector.rs
touchstone-rs/src/: lib.rs  loader.rs
touchstone-rs/src/metrics/: mod.rs  pr_auc.rs  range.rs  roc_auc.rs  thresholding.rs  vus.rs
(+23 files in other folders)
