[package]
name = "touchstone-rs"
version = "0.2.0"
edition = "2024"
authors = ["Phillip Wenig"]
description = "A Rust library for benchmarking streaming anomaly detectors against labeled time-series datasets"
license = "MIT"
repository = "https://github.com/wenig/touchstone-rs"
homepage = "https://github.com/wenig/touchstone-rs"
documentation = "https://docs.rs/touchstone-rs"
keywords = ["anomaly-detection", "benchmarking", "time-series", "streaming"]
categories = ["algorithms", "development-tools::testing"]

[dependencies]
polars = { version = "0.53", features = ["csv", "lazy", "parquet"] }
anyhow = "1"
indicatif = "0.18"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
