[project]
name = "tinytimemixer"
version = "0.1.0"
description = "https://huggingface.co/ibm-granite/granite-timeseries-ttm-r2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "touchstone-py == 0.2.0",
    "transformers",
    "torch",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
