[project]
name = "toto_4m"
version = "0.1.0"
description = "https://huggingface.co/Datadog/Toto-2.0-4m"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "touchstone-py == 0.2.0",
    "toto-2 @ git+https://github.com/DataDog/toto.git#subdirectory=toto2",
    "torch",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
